# Jarvis

./: .gitignore  .typesafe-i18n.json  CLAUDE.md  README.md  package-lock.json  package.json  skills-lock.json  updater.json
.agents/: AGENTS.md
.claude/: settings.json
.github/workflows/: release.yml
scripts/: _locale-data-large.mjs  build-i18n-locales.mjs  gen-i18n-locale-data.mjs  generate-updater.mjs  i18n-locale-data.json  sync-version.mjs
src/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_error.rs  backup_schedule.rs  database.rs  du_size.rs  lib.rs  pangolin.rs  profile_extras.rs  sftp_find.rs  sftp_transfer.rs  ssh.rs  ssh_tunnel.rs
src-tauri/src/db/: crud.rs  dialect.rs  introspect.rs  mod.rs  value.rs
src/components/: BackupManager.svelte  CronManager.svelte  CrowdsecManager.svelte  Dashboard.svelte  DatabaseManager.svelte  DiskManager.svelte  DockerManager.svelte  EnvManager.svelte  FileManager.svelte  FirewallManager.svelte  LogAnalysisManager.svelte  LogViewer.svelte  MaintenanceManager.svelte  NetDiagManager.svelte  NetworkManager.svelte  NginxProxyManager.svelte  PangolinManager.svelte  PangolinWorldMap.svelte  ProcessManager.svelte  ResticManager.svelte  RunbookManager.svelte  ServicesManager.svelte  Sidebar.svelte  SudoModal.svelte  TerminalView.svelte  TimerManager.svelte  UserManager.svelte
src/lib/: CronExpressionInput.svelte  backNavigation.svelte.ts  backendErrors.ts  formatLocale.ts  nav.ts  notifications.svelte.ts  stickToBottom.ts  (+1 more)
(+30 files in other folders)
